@@ -9,21 +9,16 @@ Compiling with make
 
 The Makefile will attempt to auto-detect:
 - Whether you are building on Cygwin or Linux (ISCYGWIN)
-- The location of your boost includes (BOOST_VERSION and/or BOOST_INCLUDE)
+- The location of your boost includes (BOOST_INCLUDE)
 
 If it gets these wrong, modify Makefile.local appropriately, or set the above
 mentioned controlling variables.
 ISCYGWIN: 1 on cygwin and 0 on Linux.
-BOOST_VERSION is the version number of your boost install, in the same format
-    that boost uses: x_yy for x.yy.0 versions and x_yy_z for x.yy.z versions.
-BOOST_INCLUDE is the directory where your boost headers can be found. If you
-    set BOOST_INCLUDE, is is not useful to also set BOOST_VERSION.
+BOOST_INCLUDE is the directory where your boost headers can be found.
 
 You may also set the following varibles:
 NOREV: Set to 0 by default, set to 1 to remove the "rXXX" from the version
     number
-NO_BOOST: Set to 0 by default; set to 1 if make erroneously finds a boost
-    install
 SVNVERSION: Set to svnversion . by default. If you're using TortoiseSVN,
     change Makefile.local to set it to SubWCRev.exe . instead.
 
