@@ -24,13 +24,11 @@
 #include<iomanip>
 #include<cstdarg>
 
-#ifndef NO_BOOST
-/* If your compiler errors on the following line, boost::date_time is not
+/* If your compiler errors on the following line, boost is not
  * properly installed.
  * Get boost from http://www.boost.org */
-#include<boost/date_time/gregorian/gregorian_types.hpp>
+#include <boost/date_time/gregorian/gregorian_types.hpp>
 using namespace boost::gregorian;
-#endif
 
 using namespace std;
 
@@ -271,7 +269,6 @@ PseudoSprite::PseudoSprite(const string&sprite,int oldspritenum):
 					}else{
 						in>>x;
 						//delay fail check until after date parsing.
-#ifndef NO_BOOST
 						if(in.peek()=='/'||in.peek()=='-'){//date
 							in.ignore();
 							ushort y,z;
@@ -293,7 +290,6 @@ PseudoSprite::PseudoSprite(const string&sprite,int oldspritenum):
 							}
 							x=(d-date(1920,1,1)).days();
 						}
-#endif//NO_BOOST
 					}
 					if(!in)break;
 					if(x>0xFFFF)break;//invalid
@@ -305,7 +301,6 @@ PseudoSprite::PseudoSprite(const string&sprite,int oldspritenum):
 						x=ReadHex(in,8);
 					}else{
 						in>>x;
-#ifndef NO_BOOST
 						if(in.peek()=='/'||in.peek()=='-'){//date
 							in.ignore();
 							ushort y,z;
@@ -341,7 +336,6 @@ PseudoSprite::PseudoSprite(const string&sprite,int oldspritenum):
 							}
 							x+=extra;
 						}
-#endif // NO_BOOST
 					}
 					if(!in)break;
 					out.write(itoa(x,256,4).c_str(),4);
